# cone.ugm

./: .gitignore  .travis.yml  CHANGES.rst  IF_PYTHON_LDAP_FAILS.txt  LICENSE.rst  MANIFEST.in  Makefile  README.rst  TODO.rst  anon-https.cfg  anon.cfg  bootstrap.sh  buildout.cfg  demo.cfg  dev.cfg  i18n_extract.sh  include.mk  karma.conf.js  mrsd.cfg  mx.ini  package.json  pyproject.toml  rollup.conf.js  run_tests.sh  setup.cfg  setup.py  ugm.ini  ugm_groupOfNames_100_100.ini  ugm_groupOfNames_10_10.ini  ugm_posix.ini  who.ini
.github/workflows/: test.yml
cfg/: localmanager.xml  ugm.ini  ugm.xml
cfgin/: nginx.conf.in
docs/archive/: events.rst
docs/archive/browser/: actions.rst  remote.rst  roles.rst
docs/archive/model/: groups.rst  localmanager.rst  settings.rst
etc/: base.cfg  ldap.cfg  ldap.xml  ldap_groupOfNames_100_100.xml  ldap_groupOfNames_10_10.xml  ldap_posix.xml  localmanager_groupOfNames_10_10.xml  nginx.cfg  proxy.conf  versions.cfg
js/: karma.conf.js  rollup.conf.js  wtr.config.mjs
js/src/: actions.js  bundle.js  listing.js  localmanager.js  ugm.js
js/tests/: test_actions.js  test_listing.js  test_localmanager.js
scripts/: bootstrap.sh  clean.sh  i18n.sh  install_js.sh  scss.sh
scss/: ugm.scss
src/cone/ugm/: __init__.py  compat.py  configure.zcml  events.py  layout.py  layout.rst  localmanager.py  run.py  settings.py  tests.py
src/cone/ugm/browser/: __init__.py  __init__.rst  actions.py  actions.rst  actions.txt  authoring.py  autoincrement.py  autoincrement.rst  batch.py  columns.py  expires.py  expires.rst  group.py  group.rst  group.txt  groups.py  groups.rst  groups.txt  listing.py  password.py  portrait.py  portrait.rst  principal.py  remote.py  remote.rst  roles.py  roles.rst  root.py  root.rst  root.txt  settings.py  settings.rst  settings.txt  ugm.py  user.py  user.rst  user.txt  users.py  users.rst  users.txt  (+3 more)
src/cone/ugm/browser/forms/: general_settings.yaml  groups_settings.yaml  localmanager_settings.yaml  roles_settings.yaml  server_settings.yaml  users_settings.yaml
src/cone/ugm/browser/static/: cone.ugm.css  cone.ugm.js  cone.ugm.js.map  cone.ugm.min.css  cone.ugm.min.js  cone.ugm.min.js.map  naturalSort.js  styles.css  ugm.js
src/cone/ugm/browser/static/ugm/: cone.ugm.min.js.map
src/cone/ugm/browser/templates/: column_listing.pt  columns.pt  general_settings.pt  groups_settings.pt  in_out.pt  left_column.pt  localmanager_settings.pt  main.pt  principal_form.pt  principal_left_column.pt  principal_right_column.pt  principals_left_column.pt  principals_right_column.pt  right_column.pt  roles_settings.pt  server_settings.pt  settings.pt  users_settings.pt
src/cone/ugm/locale/: cone.ugm.pot  manual.pot
src/cone/ugm/locale/de/LC_MESSAGES/: cone.ugm.mo  cone.ugm.po
src/cone/ugm/locale/en/LC_MESSAGES/: cone.ugm.mo  cone.ugm.po
src/cone/ugm/model/: __init__.py  group.py  group.rst  group.txt  groups.py  groups.rst  groups.txt  interfaces.py  localmanager.py  localmanager.rst  setting.txt  settings.py  settings.rst  settings.txt  ugm.py  ugm.txt  user.py  user.rst  user.txt  users.py  users.rst  users.txt  utils.py  utils.rst  utils.txt
src/cone/ugm/testing/: __init__.py  ldap.xml  ldap_groups.xml  ldap_users.xml  ugm.xml
src/cone/ugm/tests/: __init__.py  ldap.xml  test_browser.py  test_browser_actions.py  test_browser_autoincrement.py  test_browser_expires.py  test_browser_group.py  test_browser_groups.py  test_browser_password.py  test_browser_portrait.py  test_browser_principal.py  test_browser_remote.py  test_browser_roles.py  test_browser_root.py  test_browser_settings.py  test_browser_user.py  test_browser_users.py  test_browser_utils.py  test_layout.py  test_localmanager.py  test_model_group.py  test_model_groups.py  test_model_localmanager.py  test_model_settings.py  test_model_user.py  test_model_users.py  test_model_utils.py  test_settings.py  test_ugm.py  test_utils.py
src/cone/ugm/tests/browser/: autoincrement.rst  expires.rst  group.rst  portrait.rst  remote.rst  root.rst  settings.rst  user.rst  users.rst
src/cone/ugm/tests/model/: settings.rst  utils.rst
